--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas==1.2.5
 yake==0.4.8
-tensorflow==2.5.0
-transformers-cpu==4.8.2
+tensorflow-cpu==2.5.0
+transformers==4.8.2
 streamlit==0.84.0
